<resources>
    <string name="app_name">ماهان</string>
    <string name="values_folder">values</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="profile">پروفایل مشتری</string>
    <string name="connectionReport">سوابق اتصال مشتری</string>
    <string name="onlineSharj">شارژ آنلاین</string>
    <string name="payReport">سوابق پرداخت</string>
    <string name="consumechart">نمودار مصرف</string>
    <string name="speedTest">تست سرعت</string>
    <string name="tickets">تیکت ها</string>
    <string name="inviteFriends">دعوت دوستان</string>
    <string name="pointReports">سوابق امتیازها</string>
    <string name="messages">پیغام ها</string>
    <string name="games">بازی</string>
    <string name="spesioansuggestion">پیشنهاد ویژه</string>
    <string name="exit">خروج</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="current_service">سرویس فعلی شما:</string>
    <string name="connection_status">وضعیت اتصال: </string>
    <string name="taraze_mali">تراز مالی دوره:</string>
    <string name="expired">منقضی!</string>
    <string name="temporary_connection">وصل موقت</string>
    <string name="enter">ورود</string>
    <string name="rials">ریال</string>
    <string name="remaining_days"> تا انقضا</string>
    <string name="online">آنلاین</string>
    <string name="offline">آفلاین</string>
    <string name="special_offer">پیشنهاد ویژه</string>
    <string name="finish_current_feshfeshe">اتمام فشفشه</string>
    <string name="support">پشتیبانی</string>
    <string name="tickets_details">جزییات تیکت</string>
    <string name="current_package_name">سرویس فعلی شما: %1$s</string>
    <string name="news">اخبار</string>
    <string name="error">خطا</string>
    <string name="input_incorrect_error">لطفا مقدار صحیحی برای مبلغ وارد کنید</string>
    <string name="item_available_in_future">این آیتم به زودی در دسترس قرار خواهد گرفت</string>
    <string name="alert">پیغام</string>
    <string name="send_failure">در ارسال پیام مشکلی به وجود آمد</string>
    <string name="choose_sender">اشتراک گذاری با</string>
    <string name="gpsmessage">برای دسترسی به موقعیت شما و گرفتن امتیاز، لازم است GPS  خودرا روشن کنید</string>
    <string name="turnon">روشن کردن</string>
    <string name="cancel">انصراف</string>
    <string name="read_news">خواندن خبر</string>
    <string name="bank_portal">درگاه پرداخت بانک %1$s</string>
    <string name="no_new_notifies">پیغام جدیدی موجود نیست</string>
    <string-array name="sp_olaviat_items">
        <item>کم</item>
        <item>متوسط</item>
        <item>زیاد</item>
    </string-array>
</resources>
