<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_navgdrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_show_current_service"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_2"
        android:orientation="vertical"

        tools:context="ir.aspacrm.my.app.mahan.ActivityShowCurrentService">

        <android.support.v7.widget.Toolbar
            android:visibility="gone"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />

        <ImageView
            android:id="@+id/imgDrawerToggle"
            android:layout_margin="16dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:maxEms="1000"
                 />




                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:text="اینترنت رایگان 3 ماهه با ترافیک  45 گیگا بایت"
                    android:id="@+id/tv_package_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/current_service"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_remaining_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:visibility="gone"
                android:text="@string/current_service"
                android:textColor="@color/white"
                android:maxEms="100"
                android:textSize="15sp"
                android:textStyle="bold" />


                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:id="@+id/lbl_remaining_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/remaining_days"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:id="@+id/tv_remaining_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/back_orange_btn"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_expired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expired"
                    android:textColor="@color/back_orange_btn"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_temp_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <include
                    android:id="@+id/layVaslMovaghat"
                    layout="@layout/lay_btn_vasl_movaghat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="end"
                        android:text="@string/rials"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                        android:id="@+id/tv_taraze_mali"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="end"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taraze_mali"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:id="@+id/tv_connection_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ir.aspacrm.my.app.mahan.component.PersianTextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/connection_status"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|bottom">
            <include
                android:id="@+id/btn_enter"
                layout="@layout/lay_btn_enter" />

        </LinearLayout>


    </FrameLayout>
    <fragment
        android:id="@+id/replace_fragment"
        android:name="ir.aspacrm.my.app.mahan.fragment.FragmentDrawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="1" />
</android.support.v4.widget.DrawerLayout>
